# OpenScuola

./: .gitignore  meson.build  meson_options.txt
cli/: cli.d  meson.build
include/openscuola/bridge/: deviceId.h  downloadbook.h  history.h  login.h  util.h
lib/openscuola/bridge/: commonApi.d  deviceId.d  downloadbook.d  drm.d  history.d  login.d  util.d
subprojects/: cachetools.wrap  dlang_requests.wrap  dxml.wrap
subprojects/packagefiles/cachetools/: meson.build
subprojects/packagefiles/dlang_requests/: meson.build
subprojects/packagefiles/dxml/: meson.build
